# trading-os

./: .gitignore  dev.db  package-lock.json  package.json
.github/workflows/: build.yml
prisma/: schema.prisma
prisma/migrations/20260410054208_add_metadata_icon/: migration.sql
prisma/migrations/20260417103858_add_finance_tables/: migration.sql
prisma/migrations/20260504141100_add_campaign_module/: migration.sql
scripts/: prepare-bundle.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/ai/: route.ts
src/app/api/campaign/: route.ts
src/app/api/campaign/[id]/: route.ts
src/app/api/finance/balances/: route.ts
src/app/api/finance/events/: route.ts
src/app/api/pages/: route.ts
src/app/api/pages/[id]/: route.ts
src/app/api/sections/: route.ts
src/app/campaign/: page.tsx
src/app/campaign/[id]/: page.tsx
src/components/: AIChatbox.tsx  CommandPalette.tsx  ExpenseDashboard.tsx  FinanceCharts.tsx  FinanceDashboard.tsx  PageEditor.tsx  PageList.tsx  Sidebar.tsx  TradingDashboard.tsx  WelcomeScreen.tsx
src/components/filters/: FilterBuilder.tsx
src/components/ui/: BubbleToolbar.tsx  CalloutNode.tsx  HoverBlockMenu.tsx  SlashCommand.tsx  TableToolbar.tsx
src/components/views/: CalendarView.tsx  GalleryView.tsx  KanbanView.tsx  TableView.tsx
src/lib/: prisma.ts
src/modules/campaign/: AccountForm.tsx  AccountTable.tsx  CampaignDashboard.tsx  CampaignDetail.tsx  CampaignForm.tsx  campaignLogic.ts  index.ts  types.ts
src/store/: useAppStore.ts
(+5 files in other folders)
